management interface update

--- a/templates/cisco.j2
+++ b/templates/cisco.j2
@@ -47,7 +47,7 @@ ip access-list extended alchemy_list  {% for manager in management %}
 !
 !
 line con 0
-    password achemy
+    password alchemy
     login
 !
 line aux 0
