API sync hostname fix

--- a/templates/cisco.j2
+++ b/templates/cisco.j2
@@ -2,7 +2,7 @@ no service timestamps log datetime msec
 no service timestamps debug datetime msec
 no service password-encryption
 !
-hostname {{ device.hostname }}
+hostname {{ device.name }}
 !
 enable secret 5 ENABLESECRET
 !
