--- a/templates/junos.j2
+++ b/templates/junos.j2
@@ -48,6 +48,15 @@ system {
     max-configuration-rollbacks 5;
 }
 
+snmp {
+    client-list list0 { {% for manager in managementaddress %}
+        {{ manager.ip_address }}/32; {% endfor %}
+    }
+    community {{ snmp_community }} {
+        authorization read-only;
+        client-list-name list0;
+    }
+}
 
 security {
     screen {
